Bug 132486 - FILESAVE XLSX Date type X axis columns position appears shifted in Excel
Summary: FILESAVE XLSX Date type X axis columns position appears shifted in Excel
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-04-28 10:03 UTC by NISZ LibreOffice Team
Modified: 2020-06-01 14:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (14.29 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-04-28 10:03 UTC, NISZ LibreOffice Team
Details
The original file saved by Calc (8.07 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-04-28 10:04 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Excel and Calc (190.73 KB, image/png)
2020-04-28 10:04 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-04-28 10:03:42 UTC
Created attachment 160018 [details]
Example file from Excel

If the X axis of a column chart in an Excel-made chart is of Date type, saving with Calc to XLSX makes the columns appear on the tickmarks instead of between them.

Steps to reproduce:
    1. Open attached document and save it as XLSX
    2. Reopen the saved document in Excel

Actual results:
Columns are shifted, X axis setting of Axis placement is On tick marks instead of Between tick marks.

Expected results:
Same appearance as before the roundtrip.

LibreOffice details:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 60fcd4427231e8c48cd3bf8307e280fd3a13a84f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Started to happen after bug #132076 was fixed.

Adding CC to: Balázs Varga
Comment 1 NISZ LibreOffice Team 2020-04-28 10:04:02 UTC
Created attachment 160019 [details]
The original file saved by Calc
Comment 2 NISZ LibreOffice Team 2020-04-28 10:04:20 UTC
Created attachment 160020 [details]
Screenshot of the original and exported document side by side in Excel and Calc
Comment 3 Xisco Faulí 2020-04-28 15:01:04 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=75156c6fd73dc202df541306e1636727d51d6fc3

author	Balazs Varga <balazs.varga991@gmail.com>	2020-04-16 22:08:15 +0200
committer	László Németh <nemeth@numbertext.org>	2020-04-24 15:28:17 +0200
commit 75156c6fd73dc202df541306e1636727d51d6fc3 (patch)
tree 5b179fde360bc3c2d7d55ed2f67d99289496acfc
parent ccf40c0efcc371e3d5818df20af18bc10c3601bd (diff)
tdf#132076 Chart OOXML: fix lost date format of X axis

Bisected with: bibisect-linux64-6.5

Adding Cc: to Balazs Varga
Comment 4 Commit Notification 2020-05-05 07:18:18 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/778a81c114187b193140ebe816eec0805f40b6ab

tdf#132486 Chart: fix OOXML export of ShiftedCategoryPosition

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-06-01 14:40:27 UTC
Verified in

Version: 7.0.0.0.beta1+
Build ID: 2506d8221dd940dfd93d3d7c183430ba6ba3089d
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Balázs Varga, thanks for fixing this issue!!