tdf#132486 Chart: fix OOXML export of ShiftedCategoryPosition

Regression from commit 75156c6fd73dc202df541306e1636727d51d6fc3
(tdf#132076 Chart OOXML: fix lost date format of X axis)

Change-Id: I4bb62959775b0b6ed11e1f7e5473c3b9805f4e29
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92420
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>